# heat-transfer-simulator-on-gpu

./: .gitignore  CMakeLists.txt  conanfile.txt
config/: default_config.json
data/presets/: 2mat_config.json
include/: config.hpp  grid.hpp  renderer.hpp  solver.hpp
src/: config.cpp  grid.cpp  main.cpp  renderer.cpp  solver.cu
tests/: test_grid.cpp  test_heat_prop.cpp
